// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermitSimulation should not render default simulation if decodingLoading is true 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation__simulation_section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Estimated changes
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-5"
              class=""
              data-original-title="Estimated changes are what might happen if you go through with this transaction. This is just a prediction, not a guarantee."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--justify-content-center"
    >
      <svg
        class="preloader__icon"
        fill="none"
        height="20"
        viewBox="0 0 16 16"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M8 13.7143C4.84409 13.7143 2.28571 11.1559 2.28571 8C2.28571 4.84409 4.84409 2.28571 8 2.28571C11.1559 2.28571 13.7143 4.84409 13.7143 8C13.7143 11.1559 11.1559 13.7143 8 13.7143ZM8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16Z"
          fill="var(--color-primary-muted)"
          fill-rule="evenodd"
        />
        <mask
          height="16"
          id="mask0"
          mask-type="alpha"
          maskUnits="userSpaceOnUse"
          width="16"
          x="0"
          y="0"
        >
          <path
            clip-rule="evenodd"
            d="M8 13.7143C4.84409 13.7143 2.28571 11.1559 2.28571 8C2.28571 4.84409 4.84409 2.28571 8 2.28571C11.1559 2.28571 13.7143 4.84409 13.7143 8C13.7143 11.1559 11.1559 13.7143 8 13.7143ZM8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16Z"
            fill="var(--color-primary-default)"
            fill-rule="evenodd"
          />
        </mask>
        <g
          mask="url(#mask0)"
        >
          <path
            d="M6.85718 17.9999V11.4285V8.28564H-4.85711V17.9999H6.85718Z"
            fill="var(--color-primary-default)"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`PermitSimulation should render default simulation if decoding api does not return result 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation__simulation_section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Estimated changes
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-1"
              class=""
              data-original-title="Estimated changes are what might happen if you go through with this transaction. This is just a prediction, not a guarantee."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
          style="white-space: pre-wrap;"
        >
          You're giving the spender permission to spend this many tokens from your account.
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Spending cap
          </p>
        </div>
      </div>
      <div
        class="mm-box"
        style="margin-left: auto; max-width: 100%;"
      >
        <div
          class="mm-box mm-box--margin-left-auto"
          style="max-width: 100%;"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
          >
            <div
              class="mm-box mm-box--margin-inline-end-1 mm-box--display-inline mm-box--min-width-0"
            >
              <div
                style="min-width: 0;"
              >
                <div
                  aria-describedby="tippy-tooltip-2"
                  class=""
                  data-original-title="30"
                  data-tooltipped=""
                  style="display: inline;"
                  tabindex="0"
                >
                  <p
                    class="mm-box mm-text mm-text--body-md mm-text--text-align-center mm-box--padding-inline-2 mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-xl"
                    data-testid="simulation-token-value"
                    style="padding-top: 1px; padding-bottom: 1px;"
                  >
                    30
                  </p>
                </div>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex"
            >
              <div
                class="name name__missing"
              >
                <span
                  class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/question.svg');"
                />
                <p
                  class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
                >
                  0xCcCCc...ccccC
                </p>
              </div>
            </div>
          </div>
          <div
            class="mm-box"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PermitSimulation should render default simulation if decoding api returns error 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation__simulation_section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Estimated changes
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-3"
              class=""
              data-original-title="Estimated changes are what might happen if you go through with this transaction. This is just a prediction, not a guarantee."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
          style="white-space: pre-wrap;"
        >
          You're giving the spender permission to spend this many tokens from your account.
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Spending cap
          </p>
        </div>
      </div>
      <div
        class="mm-box"
        style="margin-left: auto; max-width: 100%;"
      >
        <div
          class="mm-box mm-box--margin-left-auto"
          style="max-width: 100%;"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
          >
            <div
              class="mm-box mm-box--margin-inline-end-1 mm-box--display-inline mm-box--min-width-0"
            >
              <div
                style="min-width: 0;"
              >
                <div
                  aria-describedby="tippy-tooltip-4"
                  class=""
                  data-original-title="30"
                  data-tooltipped=""
                  style="display: inline;"
                  tabindex="0"
                >
                  <p
                    class="mm-box mm-text mm-text--body-md mm-text--text-align-center mm-box--padding-inline-2 mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-xl"
                    data-testid="simulation-token-value"
                    style="padding-top: 1px; padding-bottom: 1px;"
                  >
                    30
                  </p>
                </div>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex"
            >
              <div
                class="name name__missing"
              >
                <span
                  class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/question.svg');"
                />
                <p
                  class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
                >
                  0xCcCCc...ccccC
                </p>
              </div>
            </div>
          </div>
          <div
            class="mm-box"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
